[package]
name = "lesson4-iot-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.4"
reqwest = { version = "0.11.15", default-features = false, features = ["json"] }
ruuvi-sensor-protocol = "0.6.1"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["time", "macros", "rt-multi-thread"] }
